ocaml/testsuite/tests/jane-modular-syntax/user_error1.compilers.reference
File "user_error1.ml", line 21, characters 41-55:
21 | let _malformed_extension_has_payload = [%jane.something "no payloads"] ();;
                                              ^^^^^^^^^^^^^^
Error: Modular syntax extension nodes are not allowed to have a payload,
       but "jane.something" does
